[package]
name = "horus_manager"
version = "0.1.9"
edition = "2021"
license = "Apache-2.0"
description = "Unified manager for the HORUS robotics framework"
authors = ["HORUS Team"]

[lints]
workspace = true

[lib]
name = "horus_manager"
path = "src/lib.rs"

[[bin]]
name = "horus"
path = "src/main.rs"

[[bin]]
name = "ci_test_node"
path = "src/bin/ci_test_node.rs"


[dependencies]
horus_core = { path = "../horus_core" }
horus_library = { path = "../horus_library" }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "time"] }
serde.workspace = true
serde_json.workspace = true
colored = "2.0"
indicatif = "0.17"
console = "0.15"
chrono = { workspace = true }
ctrlc = "3.4"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
toml_edit = "0.22"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.3"
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
regex = "1.10"
glob = "0.3"
log = "0.4"
env_logger = "0.11"
open = "5.0"
hostname = "0.4"
semver = "1.0"
libc = "0.2"
lazy_static = "1.4"
rayon = "1.10"
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = "1.0"
tree-sitter = "0.24"
tree-sitter-cpp = "0.23"
notify = "7.0"
num_cpus = "1.16"
schemars = { version = "0.8", optional = true }

# TUI dependencies (monitor feature)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.28", optional = true }
rand = "0.8"
memmap2 = "0.9"

# Web monitor dependencies (monitor feature)
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
webbrowser = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }
qrcode = { version = "0.14", optional = true }

# Security dependencies (monitor feature)
argon2 = { version = "0.5", optional = true }
base64 = { version = "0.21", optional = true }
rpassword = { version = "7.3", optional = true }

# Package signing
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"

[features]
# ============================================================================
# DEFAULT FEATURES
# ============================================================================
# CLI ships minimal by default
default = []

# ============================================================================
# OPTIONAL FEATURES
# ============================================================================

# mDNS discovery for local peer finding
mdns = ["horus_core/mdns"]

# Web + TUI monitor with security (adds ~15 deps)
monitor = [
    "dep:ratatui", "dep:crossterm",
    "dep:axum", "dep:tower", "dep:tower-http",
    "dep:webbrowser", "dep:futures", "dep:qrcode",
    "dep:argon2", "dep:base64", "dep:rpassword",
]

# JSON Schema generation for manifest types
schema = ["dep:schemars"]

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
assert_cmd = "2.0"
predicates = "3.0"
serde_json.workspace = true
# used by security integration tests
axum = { version = "0.7", features = ["ws"] }
horus_core = { path = "../horus_core" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
tokio-tungstenite = "0.26"
