[package]
name = "horus_py"
version = "0.1.9"
edition = "2021"

[lib]
name = "horus_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39", "num-bigint", "num-complex"] }
horus = { path = "../horus" }
horus_core = { path = "../horus_core" }  # Direct access for cuda features
horus_library = { path = "../horus_library" }
horus_types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack serialization (2-5x faster than JSON)
chrono = "0.4"
pythonize = "0.27"
ctrlc = "3.4"
colored = "2.0"
parking_lot = "0.12"  # Faster mutexes for buffer pool
dirs = "5.0"  # Cross-platform directory paths
lazy_static = "1.4"  # For global pool registry

[build-dependencies]
pyo3-build-config = "0.27"

[features]
default = []
cuda = ["horus_core/cuda"]  # Enable CUDA support for GPU tensor transfers
