[package]
name = "horus_py"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["HORUS Team"]
description = "Python bindings for the HORUS robotics framework — nodes, topics, scheduler, and message types accessible from Python with sub-microsecond IPC performance"
repository = "https://github.com/softmata/horus"
homepage = "https://horusrobotics.dev"
documentation = "https://docs.horusrobotics.dev/python/api"
keywords = ["robotics", "python", "bindings", "horus", "pyo3"]
categories = ["science::robotics", "api-bindings"]

[lints]
workspace = true

[lib]
name = "horus_py"
# `rlib` is added alongside `cdylib` so that `cargo test` can build a test
# binary.  The `extension-module` pyo3 feature is guarded by a Cargo feature
# so it is not active during unit testing (which would require Python symbols).
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["abi3-py39", "num-bigint", "num-complex"] }
horus = { path = "../horus" }
horus_core = { path = "../horus_core" }
horus_types = { path = "../horus_types" }
horus-robotics = { git = "https://github.com/softmata/horus-robotics.git" }
horus-tf = { git = "https://github.com/softmata/horus-tf.git", features = ["wait"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rmp-serde = "1.1"
pythonize = "0.27"
ctrlc = "3.4"
rand = { workspace = true, features = ["small_rng"] }
lazy_static = "1.4"

[build-dependencies]
pyo3-build-config = "0.27"

[features]
# `extension-module` must be active for building the Python `.so` file but must
# NOT be active during `cargo test` (the test binary cannot link against libpython).
# It is the default so that normal `cargo build` / `maturin` produce a working
# extension; pass `--no-default-features` when running unit tests.
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
