[package]
name = "horus_ros2_bridge"
version = "0.1.7"
edition = "2021"
description = "ROS2 protocol bridge for HORUS via Zenoh transport"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/horus"

[dependencies]
horus_core = { path = "../horus_core", version = "0.1.7", features = ["zenoh-transport"] }

# Core dependencies
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde", "std"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"

# Zenoh transport
zenoh = "1.0.8"

# ROS2 CDR serialization
cdr-encoding = "0.10"
byteorder = "1.5"

# MessagePack for efficient serialization
rmp-serde = "1.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
