[package]
name = "horus_router"
version = "0.1.7"
edition = "2021"
authors = ["HORUS Team"]
description = "Central message router service for HORUS distributed robotics framework"
license = "Apache-2.0"

[[bin]]
name = "horus_router"
path = "src/main.rs"

[dependencies]
horus_core = { path = "../horus_core" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
tls = ["horus_core/tls"]
