[package]
name = "horus_sys"
version = "0.1.0"
edition = "2021"
description = "Platform abstraction layer for the HORUS robotics framework"
license = "Apache-2.0"
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5"
core_affinity = "0.8"
memmap2 = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_Media",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parity_bench"
harness = false

[lints]
workspace = true
