[package]
name = "horus_types"
version = "0.1.9"
edition = "2021"
authors = ["HORUS Contributors"]
description = "Core tensor types for HORUS - zero horus dependencies"
license = "Apache-2.0"
repository = "https://github.com/softmata/horus"
keywords = ["robotics", "tensor", "horus"]
categories = ["science::robotics"]

[dependencies]
bytemuck = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
