[package]
name = "horus_core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bincode = "1.3"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
urdf-rs = "0.9"

[dependencies.horus_core]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

# ── Fuzz targets ──────────────────────────────────────────────────────────────

[[bin]]
name = "fuzz_message_deser"
path = "fuzz_targets/fuzz_message_deser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pod_from_bytes"
path = "fuzz_targets/fuzz_pod_from_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_topic_header"
path = "fuzz_targets/fuzz_topic_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_shm_header"
path = "fuzz_targets/fuzz_shm_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_urdf_parse"
path = "fuzz_targets/fuzz_urdf_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tensor_pool"
path = "fuzz_targets/fuzz_tensor_pool.rs"
test = false
doc = false
bench = false
