[package]
name = "horus_library_py"
version = "0.1.5"
edition = "2021"
description = "Python bindings for HORUS Library - Standard robotics messages, nodes, and algorithms"
authors = ["HORUS Contributors"]

[lib]
name = "horus_library"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
numpy = "0.27"
serde = { workspace = true }
serde_json = "1.0"

# HORUS dependencies
horus_library = { path = ".." }

# Simulation tools
sim2d = { path = "../tools/sim2d", features = ["python"] }
sim3d = { path = "../tools/sim3d", features = ["python"], optional = true }

[features]
default = []
sim3d = ["dep:sim3d"]

[build-dependencies]
pyo3-build-config = "0.27"
