[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "horus-library"
version = "0.1.6"
description = "HORUS Library for Python - Standard robotics messages, nodes, and algorithms"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "HORUS Contributors"}
]
maintainers = [
    {name = "HORUS Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]
keywords = ["robotics", "messages", "geometry", "sensors", "horus"]

dependencies = []

[project.optional-dependencies]
core = ["horus>=0.1.1"]  # Core HORUS Python API

[project.urls]
Homepage = "https://github.com/softmata/horus"
Documentation = "https://docs.horus.rs"
Repository = "https://github.com/softmata/horus"
Issues = "https://github.com/softmata/horus/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "horus.library._library"
