[package]
name = "tanksim"
version = "0.1.6"
edition = "2021"

[[bin]]
name = "tanksim"
path = "src/main.rs"

[dependencies]
horus = { path = "../../../horus" }
horus_core = { path = "../../../horus_core" }
horus_library = { path = "../..", features = ["crossterm"] }
serde.workspace = true
tokio = { version = "1.0", features = ["full"] }
